Introduce Kotlin, More Abstraction, Fix Tests (#175)
* Rework GameState
* Convert some classes to Kotlin
* Temporary fix for stepRequest Test (#124)
* Improve logging
* Add some helpful toString-methods to improve debugging